--- a/Evolution des cycles météorologiques.ipynb
+++ b/Evolution des cycles météorologiques.ipynb
@@ -167,7 +167,7 @@
    "id": "2d16e37e-7762-4e69-84b4-d97f0569aeb6",
    "metadata": {},
    "source": [
-    "Les données étant sur une seule colonne, il a fallu faire en sorte que les données correspondent aux titres et générer des colonnes pour le dataframe. Pour cela, j'ai intégré les critères <em>skiprows</em> et <em>skipfooter</em> pour générer des dataframes à partir d' un certain nombre et jusqu'à un certain nombre de lignes. Les colonnes générées sont renommées et j'intégrons le critère <em>infer_nrows</em> pour garder les valeurs négatives afin de ne pas fausser nos résultats.\n"
+    "Les données étant sur une seule colonne, il a fallu faire en sorte que les données correspondent aux titres et générer des colonnes pour le dataframe. Pour cela, j'ai intégré les critères <em>skiprows</em> et <em>skipfooter</em> pour générer des dataframes à partir d'un certain nombre et jusqu'à un certain nombre de lignes. Les colonnes générées sont renommées et j'intègre le critère <em>infer_nrows</em> pour garder les valeurs négatives afin de ne pas fausser nos résultats.\n"
    ]
   },
   {
@@ -1206,7 +1206,7 @@
    "id": "a139d5f5-8303-41a8-bec6-4495e52103f5",
    "metadata": {},
    "source": [
-    "En synthétisant les données précédemment obtenues, on obtient le dataframe ci-dessus. On observe que les températures sont très similaires entre les stations de Chaumont et de La Chaux-de-Fonds, cela s'explique par le fait qu'elles sont toutes deux situées à une altitude équivalente (env. 1'000 m).\n",
+    "En synthétisant les données précédemment obtenues, on obtient le dataframe ci-dessus. On observe que les températures sont très similaires entre les stations de Chaumont et de La Chaux-de-Fonds, cela peut s'expliquer par le fait qu'elles sont toutes deux situées à une altitude équivalente (env. 1'000 m).\n",
     "\n",
     "Pour les étés, nous constatons les résultats suivants :\n",
     "> <p> l'été 1912 a été le plus froid pour Neuchâtel et Chaumont alors que pour La Chaux-de-Fonds, c'est l'été de 1972 ;\n",
@@ -1393,8 +1393,7 @@
    "id": "d443be7d-83f6-47d6-b019-d1d3ffa46b78",
    "metadata": {},
    "source": [
-    "Les résultats démontrent une augmentation des températures aussi bien en été qu'en hiver avec une phase ascendante qui a débuté dans les années 1970. Il semblerait que ceci soit en corrélation avec la forte industrialisation des pays européens à la même période, ceci est bien entendu une hypothèse.\n",
-    "Néanmoins, je peux conclure que nous sommes dans une période de réchauffement qui s'accélère rapidement. \n",
+    "Les résultats démontrent une augmentation des températures aussi bien en été qu'en hiver avec une phase ascendante qui a débuté dans les années 1970. On émet 'hypothèse que ceci pourrait être en corrèlation avec la forte industrialisation des pays européens à la même période. Néanmoins, je peux conclure que nous sommes dans une période de réchauffement qui s'accélère rapidement. \n",
     "\n",
     "Les conséquences à terme peuvent être très variées car ce ne sont que des hypothèses de scénarios, mais voici des exemples de ce à quoi nous pouvons nous attendre :\n",
     "\n",
@@ -1406,7 +1405,7 @@
     "\n",
     "> ces dérèglements entraineront des changements climatiques majeurs (tempêtes et tornades plus fréquentes, inondations plus intenses lors de fort épisodes pluvieux, ...)\n",
     "\n",
-    "En complément de notre analyse, je vous invite à visiter ces liens pour avoir une idée très claire de l'évolution des températures mondiales :\n",
+    "En complément de mon analyse, je vous invite à visiter ces liens pour avoir une idée très claire de l'évolution des températures mondiales :\n",
     "> https://www.youtube.com/watch?v=jWoCXLuTIkI\n",
     "> <p style=\"color:green\">Vidéo mise en ligne par la Nasa illustrant les changements de température de 1880 à 2021 ;\n",
     "\n",
